hobbies pg contac pg and anchor tags

--- a/web development/haydens personal site/index.html
+++ b/web development/haydens personal site/index.html
@@ -12,16 +12,12 @@
   <hr>
   <h2>Education</h2>
   <ul>
-      <li> Full stack cerificate for software development</li>
+      <li> Full stack <a href="https://bottega.tech/" >cerificate</a> for software development</li>
       <li>some college</li>
       <li>7 months of practice</li>
 </ul>
-<h2>My Hobbies</h2>
-<ol>
-    <li>Dancing</li>
-    <li>Singing </li>
-    <li>Rapping</li> 
+<a href="hobbies.html">My Hobbies</a>
 
-</ol> 
+<a href="contact.html">Contact</a>
 </body>
 </html>
