--- a/web development/haydens personal site/index.html
+++ b/web development/haydens personal site/index.html
@@ -5,17 +5,40 @@
   <title>Haydens personal html site</title>
 </head>
 <body>
-  <h1> Hayden Neilson</h1>
-  <h2><i>Junior developer</i></h2>
-
-  <p>Creative and dynamic individual with proven success in delivering product/service in accordance with specifications and collaborating with manager. Demonstrated excellence in solving complex challenges with defined processes and identifying improvements. Extraordinary skills in programming applications and testing/updating software. Assertive and enthusiastic developer with an ability to work independently and within a team environment to achieve goals. Proficient in 12 programming languages and analyzing software performance. Possess a high level of educational background in computer science and looking for a kick start career.  Outstanding oral and written communication and critical-thinking skills. High attention to detail as well as flexible and adaptable to change.</p>
-  <hr>
+  <table cellspacing = "20px">
+    <td><img src="" alt="me"></td>
+    <td><h1> Hayden Neilson</h1>
+      <h2><i>Junior developer</i></h2>
+      <p>Creative and dynamic individual with proven success in delivering product/service in accordance with specifications and collaborating with manager. Demonstrated excellence in solving complex challenges with defined processes and identifying improvements. Extraordinary skills in programming applications and testing/updating software. Assertive and enthusiastic developer with an ability to work independently and within a team environment to achieve goals. Proficient in 12 programming languages and analyzing software performance. Possess a high level of educational background in computer science and looking for a kick start career.  Outstanding oral and written communication and critical-thinking skills. High attention to detail as well as flexible and adaptable to change.</p>
+     </td>
+  </table>
+ <hr>
   <h2>Education</h2>
   <ul>
       <li> Full stack <a href="https://bottega.tech/" >cerificate</a> for software development</li>
       <li>some college</li>
       <li>7 months of practice</li>
 </ul>
+<table>
+  <thead>
+    <th>Dates</th>
+    <th>Work</th>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Assistant Manager (2017 – 2019)</td> 
+      <td>Quick Quack Car Wash</td> 
+    </tr>
+    <tr>
+      <td>Shift Supervisor (2016 – 2017</td>
+      <td>CVS Pharmacy</td>
+    </tr>
+
+  </tbody>
+  <tfoot>
+
+  </tfoot>
+</table>
 <a href="hobbies.html">My Hobbies</a>
 
 <a href="contact.html">Contact</a>
