--- a/web development/haydens personal site/index.html
+++ b/web development/haydens personal site/index.html
@@ -19,7 +19,10 @@
       <li>some college</li>
       <li>7 months of practice</li>
 </ul>
-<table>
+
+<hr>
+
+<table cellspacing = "10px">
   <thead>
     <th>Dates</th>
     <th>Work</th>
@@ -39,6 +42,65 @@
 
   </tfoot>
 </table>
+
+<hr>
+
+<h3>Skills</h3>
+<table cellspacing = "10px">
+  <thead>
+    <th>Languages</th>
+    <th>Understanding</th>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Python 3</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>JavaScript</td> 
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>ReactJS</td> 
+      <td>⭐⭐⭐</td>
+    </tr>    
+      <td>Flask</td>
+      <td>⭐⭐⭐</td>
+    </tr>    
+      <td>HTML 5</td>
+      <td>⭐⭐⭐⭐</td>
+    </tr>    
+      <td>JSON</td>
+      <td>⭐⭐</td>
+    </tr>    
+      <td>CSS</td>
+      <td>⭐⭐⭐⭐</td>
+    </tr>    
+      <td>Flexbox</td>
+      <td>⭐⭐⭐⭐⭐</td>
+    </tr>    
+      <td>CSS Grid</td>
+      <td>⭐⭐⭐⭐⭐</td>
+    </tr>    
+      <td>Git</td>
+      <td>⭐⭐⭐⭐⭐</td>
+    </tr>    
+      <td>SQL Databases</td>
+      <td>⭐⭐</td>
+    </tr>    
+      <td>SASS</td>
+      <td>⭐⭐</td>
+    </tr>    
+      <td>XML</td>
+      <td>⭐⭐⭐</td>
+  </tbody>
+  <tfoot>
+
+  </tfoot>
+</table>
+
+
+<hr>
 <a href="hobbies.html">My Hobbies</a>
 
 <a href="contact.html">Contact</a>
