--- a/web development/haydens personal site/contact.html
+++ b/web development/haydens personal site/contact.html
@@ -7,5 +7,15 @@
 <body>
   Email: haydenneilson@yahoo.com
   <a href=" https://github.com/Hayden-Neilson">Github</a> 
+
+<form action="mailto:haydenneilson@yahoo.com" method="POST" enctype="text/plain">
+    <label>Your Name</label>
+    <input type="text" name="yourname" value=""><br>
+    <label>Your Email</label>
+    <input type="email" name= "Hayden" value=""><br>
+    <label>Your Name</label>
+    <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>
+    <input type="submit" name="">
+</form>
 </body>
 </html>
