added external stylesheets

--- a/web development/haydens personal site/contact.html
+++ b/web development/haydens personal site/contact.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset='UTF-8'>
   <title>Contact</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
+
 <body>
   Email: haydenneilson@yahoo.com
   <a href=" https://github.com/Hayden-Neilson">Github</a> 
@@ -17,5 +20,28 @@
     <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>
     <input type="submit" name="">
 </form>
+
+<a href="hobbies.html">My Hobbies</a>
+<a href="index.html">Homepage</a>
+
+
 </body>
 </html>
+
+<!-- <h1>happy days</h1>
+<hr>
+<a href="https://developer.mozilla.org/en-US/">MDN</a>
+<table>
+    <thead>
+        <tbody>
+            <tr>
+                <td>fun</td>
+                <td>skills</td>
+            </tr>
+            <tr>
+                <td>wow</td>
+                <td>scooby</td>
+            </tr>
+        </tbody>
+    </thead>
+</table> -->
