--- a/web development/haydens personal site/hobbies.html
+++ b/web development/haydens personal site/hobbies.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset='UTF-8'>
   <title>My Hobbies</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>My Hobbies</h1>
@@ -12,5 +13,11 @@
         <li>Rapping</li> 
     
     </ol> 
+
+    
+    <a href="index.html">Homepage</a>
+
+    <a href="contact.html">Contact</a>
+</body>
 </body>
 </html>
