--- a/web development/haydens personal site/index.html
+++ b/web development/haydens personal site/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset='UTF-8'>
   <title>Haydens personal html site</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
+
 <body>
   <table cellspacing = "20px">
     <td><img src="" alt="me"></td>
@@ -13,7 +16,7 @@
      </td>
   </table>
  <hr>
-  <h2>Education</h2>
+  <h3>Education</h3>
   <ul>
       <li> Full stack <a href="https://bottega.tech/" >cerificate</a> for software development</li>
       <li>some college</li>
